Camera lens sensor gizmo issues #58573

Closed
opened 2018-12-03 02:15:26 +01:00 by Gavin Scott · 6 comments

System Information
Windows 10, Nvidia 1060

Blender Version
Current or recent 2.80 build

Short description of error
The lighter-yellow (in the default theme) dragable camera lens focal-length 3dview gizmo has a few issues still.

Exact steps for others to reproduce the error

  1. Start Blender, select camera, deselect all.
    The yellow gizmo rectangle remains highlighted.

  2. Select camera. Single click on the yellow gizmo rectangle.
    The gizmo moves across the origin to the opposite side of the scene.

  3. The gizmo rectangle is always drawn on top of the normal camera frustrum rectangle and looks kinda crummy with parts of each visible.

**System Information** Windows 10, Nvidia 1060 **Blender Version** Current or recent 2.80 build **Short description of error** The lighter-yellow (in the default theme) dragable camera lens focal-length 3dview gizmo has a few issues still. **Exact steps for others to reproduce the error** 1) Start Blender, select camera, deselect all. The yellow gizmo rectangle remains highlighted. 2) Select camera. Single click on the yellow gizmo rectangle. The gizmo moves across the origin to the opposite side of the scene. 3) The gizmo rectangle is always drawn on top of the normal camera frustrum rectangle and looks kinda crummy with parts of each visible.
Author

Added subscriber: @GavinScott

Added subscriber: @GavinScott
Campbell Barton self-assigned this 2018-12-03 02:17:40 +01:00

This issue was referenced by 4978ef5ed5

This issue was referenced by 4978ef5ed5990df2d8aaf287379c0dec8d9fb251

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @Keavon

Added subscriber: @Keavon

The first part of this issue is still an outstanding bug that should be fixed before 2.80 because it's so immediately obvious to anyone opening up the software for the first time. To reproduce: open Blender, click the camera, click elsewhere to deselect the camera. The lens remains highlighted yellow until you select a whole new separate object.

The first part of this issue is still an outstanding bug that should be fixed before 2.80 because it's so immediately obvious to anyone opening up the software for the first time. To reproduce: open Blender, click the camera, click elsewhere to deselect the camera. The lens remains highlighted yellow until you select a whole new separate object.

Apologies, I am not sure if I need to tag @ideasman42 in order to see this (the comment I left above).

Apologies, I am not sure if I need to tag @ideasman42 in order to see this (the comment I left above).
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58573
No description provided.