Fix T58573: Camera lens gizmo error on click